k8s-manifests/base/superapp/router/superapp_route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
spec:
  path: /api/v1/cbesuperapp/bps_auth
  to:
    name: transaction-dev
    weight: 100
    kind: Service
  host: devapisuperapp.cbe.com.et
  tls:
    termination: edge
    certificate: |
      Bag Attributes
          localKeyID: 01 00 00 00 
          friendlyName: CBE Certificate 2025
      subject=C = ET, L = Addis Ababa, O = Commercial Bank of Ethiopia, CN = *.cbe.com.et
      issuer=C = US, O = DigiCert Inc, CN = DigiCert Global G2 TLS RSA SHA256 2020 CA1
      -----BEGIN CERTIFICATE-----
      MIIH1zCCBr+gAwIBAgIQCsCSfc0bNC9zeR+2nA5qCDANBgkqhkiG9w0BAQsFADBZ
[...]
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIJQwIBADANBgkqhkiG9w0BAQEFAASCCS0wggkpAgEAAoICAQDJ6gn1oB1Y2IJt
[...]
      /7Nxf8UdlT2KTQhGi6m4TZWmGypgMUI=
      -----END PRIVATE KEY-----
    caCertificate: |
      Bag Attributes
          localKeyID: 01 00 00 00 
          friendlyName: CBE Certificate 2025
      subject=C = ET, L = Addis Ababa, O = Commercial Bank of Ethiopia, CN = *.cbe.com.et
      issuer=C = US, O = DigiCert Inc, CN = DigiCert Global G2 TLS RSA SHA256 2020 CA1
      -----BEGIN CERTIFICATE-----
      MIIH1zCCBr+gAwIBAgIQCsCSfc0bNC9zeR+2nA5qCDANBgkqhkiG9w0BAQsFADBZ
[...]
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect  
  port:
    targetPort: 8080
